--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "firebase": "^7.14.3",
     "react": "^16.13.1",
+    "react-admin": "^3.5.1",
+    "react-admin-firebase": "^3.1.22",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
     "typescript": "~3.7.2"
