--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-admin": "^3.5.1",
     "react-admin-firebase": "^3.1.22",
     "react-dom": "^16.13.1",
+    "react-firebaseui": "^4.1.0",
     "react-scripts": "3.4.1",
     "typescript": "~3.7.2"
   },
